--- a/wp-content/themes/divi-mft/sass/layouts/_footer.scss
+++ b/wp-content/themes/divi-mft/sass/layouts/_footer.scss
@@ -57,5 +57,21 @@
   .right {
     float: right;
     text-align: right;
+
+    @media (max-width: 479px) {
+      float: left;
+      clear: left;
+      text-align: left;
+    }
+  }
+}
+
+@media (max-width: 479px) {
+  .et_pb_text_align_right,
+  .et_pb_button_alignment_right {
+    .global-footer & {
+      text-align: left;
+      max-width: 100%;
+    }
   }
 }
