--- a/wp-content/themes/divi-mft/sass/layouts/_home.scss
+++ b/wp-content/themes/divi-mft/sass/layouts/_home.scss
@@ -130,6 +130,11 @@
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
     padding: 30px;
 
+    @media (max-width: 600px) {
+      width: auto;
+      right: 30px;
+    }
+
     .header-content {
       padding: 0;
       margin: 0;
